#cargo-features = ["edition2021"]
[package]
name = "stm32f1_rust_can"
version = "0.1.0"
authors = ["joao404 <marcel@maage.online>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 'z' # turn on maximum optimizations. We only have 64kB
lto = true      # Link-time-optimizations for further size reduction

[dependencies]
embedded-hal = { features = ["unproven"], version = "0.2.7" }
nb = "1"
cortex-m = "0.7.6"
cortex-m-rt = "0.7.1"
cortex-m-semihosting = "0.5.0"
panic-halt = "0.2.0"
bxcan = "0.6.2"
#stm32f1xx-hal = {version = "0.10.0" , features = ["rt", "stm32f103", "medium"]}
stm32f1xx-hal = {git = "https://github.com/joao404/stm32f1xx-hal" , version = "0.10.0" , features = ["rt", "stm32f103", "medium"]}
cortex-m-rtic = "1.1.3"
dwt-systick-monotonic = "1.0.0"
rtic-monotonic = { version = "1.0", optional = true }
heapless = "0.7.16"
pid = "3.0.0"

